[gd_scene load_steps=6 format=3 uid="uid://du2nrgtvwt25y"]

[ext_resource type="Texture2D" uid="uid://bdkr3n5lqdwqn" path="res://assets/hud/charBlock.png" id="1_lb6e0"]
[ext_resource type="Script" path="res://scenes/hud/char_block.gd" id="2_f6ckp"]
[ext_resource type="Texture2D" uid="uid://dpt18gwh1cgfa" path="res://assets/characters/troupeChar1.png" id="2_vnql3"]
[ext_resource type="Texture2D" uid="uid://cv7fp1l7pwfmr" path="res://assets/props/halberd.png" id="3_f2xjr"]
[ext_resource type="Script" path="res://scripts/characters/charComponents.gd" id="3_kokqt"]

[node name="charBlock" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_lb6e0")
script = ExtResource("2_f6ckp")

[node name="charComponents" type="Node" parent="."]
script = ExtResource("3_kokqt")

[node name="CharTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 15.0
offset_right = 55.0
offset_bottom = 40.0
texture = ExtResource("2_vnql3")

[node name="WeaponTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -85.0
offset_right = -26.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_f2xjr")
expand_mode = 2

[node name="HealthBox" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 184.0
offset_top = 129.0
offset_right = 306.0
offset_bottom = 152.0
alignment = 1

[node name="HealthLabel" type="Label" parent="HealthBox"]
layout_mode = 2
size_flags_horizontal = 6
text = "Health:"

[node name="HealthNumber" type="Label" parent="HealthBox"]
layout_mode = 2
text = "/100"

[node name="SelectButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="took_damage" from="charComponents" to="." method="_on_char_components_took_damage"]
[connection signal="mouse_entered" from="SelectButton" to="." method="_on_select_button_mouse_entered"]
[connection signal="mouse_exited" from="SelectButton" to="." method="_on_select_button_mouse_exited"]
[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
